--- a/src/blog/templates/blog/post_form.html
+++ b/src/blog/templates/blog/post_form.html
@@ -6,17 +6,12 @@
         <form method="POST">
             {% csrf_token %}
             <fieldset class="form-group">
-                <legend class="border-bottom mb-4">Join Today </legend>
+                <legend class="border-bottom mb-4">Blog Post</legend>
                 {{ form|crispy }}
             </fieldset>
             <div class="form-group">
-                <button class="btn btn-outline-info" type="submit">Login</button>
+                <button class="btn btn-outline-info" type="submit">Post</button>
             </div>
         </form>
-        <div class="border-top pt-3">
-            <small class="text-muted">
-                Need An Account? <a class="ml-2" href="{% url 'register' %}">Sign Up</a>
-            </small>
-        </div>
     </div>
 {% endblock content%}
