--- a/src/users/templates/users/profile.html
+++ b/src/users/templates/users/profile.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "blog/base.html" %}
 {% load crispy_forms_tags %}
 {% block content %}
         <div class="content-section">
@@ -15,6 +15,9 @@
                                 <legend class="border-bottom mb-4">Profile Info</legend>
                                 {{ u_form|crispy }}
                                 {{ p_form|crispy }}
+                                <div>
+                                        <a href="{% url "change-password" %}">Change Password</a>
+                                </div>
                         </fieldset>
                         <div class="form-group">
                                 <button class="btn btn-outline-info" type="submit">Update</button>
